# allwinner-bsp

./: .gitignore
configs/linux-5.10/: sun55iw3p1.dtsi
configs/linux-5.15/: sun55iw3p1.dtsi  sun55iw6p1.dtsi  sun60iw1p1.dtsi  sun60iw2p1-cpu-vf.dtsi  sun60iw2p1.dtsi  sun60iw2p1_min_defconfig
configs/linux-6.1/: sun60iw2p1.dtsi
configs/linux-6.6/: sun55iw3p1.dtsi  sun60iw2p1-cpu-vf.dtsi  sun60iw2p1.dtsi  sun65iw1p1.dtsi
drivers/: Kconfig  Makefile
drivers/awlink/: Kconfig  Makefile  sunxi_awlink.c  sunxi_awlink_asm.h  sunxi_awlink_asm_linux6.6.S
drivers/bus/: Kconfig  Makefile  sunxi-nsi-bw.c  sunxi-nsi-ecc.c  sunxi-nsi.c  sunxi-nsi.h  sunxi_nsi.h
drivers/ce/: Makefile  sunxi_ce.c  sunxi_ce_cdev.c  sunxi_ce_cdev.h  sunxi_ce_proc_comm.c  sunxi_hwrng.c
drivers/clk/: clk-debugfs.c  clk-debugfs.h
drivers/cpufreq/: sun50i-cpufreq-nvmem.c
drivers/crashdump/: Makefile  borrowed_code.c  sunxi-crashdump.c  sunxi-crashdump.h  sunxi-crashnote-func.c  sunxi-crashnote.h  sunxi-dump2pc.c  sunxi-minidump.c  sunxi-minidump.h
drivers/devfreq/: Makefile  sun55iw3-devfreq.c
drivers/di/: Makefile
drivers/dma/: sunxi-dma.c
drivers/dram_info/: Kconfig  Makefile  sunxi_dram_info.c
drivers/drm/: Kconfig  sunxi_drm_crtc.c  sunxi_drm_crtc.h  sunxi_drm_drv.c  sunxi_drm_drv.h  sunxi_drm_dsi.c  sunxi_drm_edp.c  sunxi_drm_hdmi.c  sunxi_drm_intf.c  sunxi_drm_intf.h  sunxi_drm_lvds.c  sunxi_drm_rgb.c  sunxi_drmfb_core.c  sunxi_fbdev.h  (+1 more)
drivers/ufs/: BUILD.bazel  ddk-config.json  sunxi-ufs-platform.c  sunxi-ufs.h
include/: sunxi-log.h  sunxi-sbi.h  sunxi-sid.h  sunxi-smc.h
(+613 files in other folders)
